# central-bank-scraper

./: .gitignore  Dockerfile  README.md  docker-compose-db.yml  docker-compose.yml  init.sql  local_main.py  main.py  pyproject.toml
central_bank_scraper/: main.py
deploy/: .env.template  runner.sh
scripts/: runner.py  set_sql_login.py
